gcc/testsuite/gm2/pim/pass/forarray.mod
MODULE forarray ;


VAR
   array: ARRAY [0..10] OF CARDINAL ;


PROCEDURE Init ;
VAR
   i, n: CARDINAL ;
BEGIN
   array[0] := 10 ;
   n := 0 ;
   FOR i := 1 TO array[n] DO
   END
END Init ;


BEGIN
   Init
END forarray.
