gcc/testsuite/gm2/pim/fail/badset3.mod
MODULE badset3 ;


VAR
   s10: SET OF [1..10] ;
   s20: SET OF [1..20] ;
BEGIN
   IF s10 = s20
   THEN
   END
END badset3.
